[package]
name = "reader"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Nathan Laan"]
homepage = "https://github.com/NathanLaan/reader/"
repository = "https://github.com/NathanLaan/reader/"
description = "A Rust Feed Reader implemented in WASM."

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
